--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -34,7 +34,7 @@
         android:layout_below="@id/logo"
         android:layout_marginTop="32dp"
         android:background="@drawable/bg_input_field"
-        android:hint="@string/student_id"
+        android:hint="@string/username"
         android:fontFamily="@font/kulim_park_bold"
         android:padding="12dp"
         android:textColor="@android:color/white"
