--- a/app/src/main/res/layout/activity_upload2.xml
+++ b/app/src/main/res/layout/activity_upload2.xml
@@ -28,6 +28,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="140dp"
+        app:cardBackgroundColor="@color/white"
         app:cardElevation="12dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@id/bottomNav"
@@ -171,7 +172,7 @@
 
                 <!-- Discard Button -->
                 <Button
-                    android:id="@+id/btnDiscardVideo"
+                    android:id="@+id/btnDiscard"
                     android:layout_width="0dp"
                     android:layout_height="48dp"
                     android:text="Discard Video"
